--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,13 @@ canvas {
   left: 0;
 }
 
+.high-score {
+  position: absolute;
+  top: 10px;
+  right: 20px;
+  color: rgb(255, 246, 29);
+}
+
 .button {
   border-radius: 10px;
   padding: 10px 20px;
